--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,36 @@ body
     margin: 5px 0 8px;
     
 }
+.skill-section
+{
+    width: 100%;
+    background-color: #232a34;
+    margin-top: 70px;
+}
+.skill-cont
+{
+    width: 100%;
+    overflow: auto;
+}
+.skill-pic
+{
+    width: 50%;
+    float: left;
+    padding: 0px 15px;
+}
+.skill-per
+{
+    margin-top: 125px 0px 0px;
+    width: 100%;
+    position: relative;
+}
+.ratio-per
+{
+    background-color: white;
+    height: 30px;
+    width: 100%;
+    margin: 0px 0px 38px;
+}
 
 
 
