--- a/css/style.css
+++ b/css/style.css
@@ -837,5 +837,67 @@ h6 {
     font-size: 14px;
     margin-bottom: 8px;
 }
+.map-main
+{
+    position: relative;
+}
+.map-img
+{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+/*    background-color: rgb(229, 227, 223);*/
+}
+.send-h2
+{
+    font-size: 36px;
+    margin: 50px 0 40px;
+}
+.common-form
+{
+    width: 100%;
+    overflow: auto;
+}
+.form-main
+{
+    width: 33.33%;
+    float: left;
+    padding: 0 8px 0 0;
+}
+.form-upr
+{
+    height: 50px;
+    margin-bottom: 20px;
+    border: 1px solid #dfdfdf;
+    padding: 15px 15px;
+}
+.form-sub
+{
+    width: 100%;
+}
+.form-msg
+{
+    margin-bottom: 25px;
+    border: 1px solid #dfdfdf;
+    padding: 20px 15px;
+    height: 260px;
+}
+.send
+{
+    background-color: #d73e4d;
+    border: 1px solid #d73e4d;
+    width: 140px;
+    line-height: 40px;
+    
+/*    padding: 15px 10px;*/
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    display: inline-block;
+    text-decoration: none;
+}
+
 
 
