--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ html {
     width: 100%;
     height: 100%;
     margin: 0;
+    font-family: 'Raleway', sans-serif;
+/*    font-weight: 400;*/
+    font-size: 14px;
+    color: #6f6f6f;
 }
 
 * {
@@ -36,15 +40,6 @@ h6 {
 
 }
 
-body {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    color: #6f6f6f;
-    line-height: 1.42857143;
-
-}
-
 .container {
     width: 90%;
     padding: 0px 15px;
@@ -67,7 +62,6 @@ body {
 
 .navigation {
     width: 100%;
-    height: 70px;
     position: absolute;
     z-index: 999;
     /*
@@ -84,13 +78,18 @@ body {
     width: 90%;
     margin: 0 auto;
     text-align: center;
+    overflow: auto;
+
 }
 
 .nav-logo {
     float: left;
-    padding: 0px 20px;
+    
     width: 20%;
-    margin-top: 15px;
+/*    margin-top: 15px;*/
+    
+        
+
 
 
 }
@@ -99,28 +98,30 @@ body {
     display: inline-block;
     text-decoration: none;
     text-align: right;
+    padding: 15px;
+   
 }
 
 .nav-menu {
     float: right;
     width: 80%;
-    margin-top: 15px;
-    /*    padding-left: 15px;*/
-    padding-top: 10px;
+
     text-align: center;
-    /*    padding: 15px;*/
+    
+      
 }
 
 .nav-list {
-    list-style: none;
-    /*    padding: 10px;*/
+    
+        padding: 15px;
 }
-
-.nav-list-items {
+.nav-list li
+{
     display: inline-block;
     text-align: center;
-
 }
+
+
 
 /*
 .nav-list>li
@@ -128,6 +129,7 @@ body {
     float: left;
 }
 */
+
 .nav-name {
     color: white;
 
@@ -135,13 +137,15 @@ body {
     display: inline-block;
     font-weight: 700;
     text-transform: uppercase;
-    padding: 9px 15px;
+    padding:  10px;
     line-height: 20px;
     text-align: center;
+    
 }
 
 .nav-name.nav-clr {
     color: #d73e4d;
+    padding: 10px;
 }
 
 .header-txt {
@@ -151,7 +155,7 @@ body {
     right: 0;
     width: 60%;
     margin: auto;
-    /*    background-color: crimson;*/
+/*        background-color: crimson;*/
     text-align: center;
     padding: 20px;
 
@@ -161,7 +165,7 @@ body {
     font-size: 48px;
 
     font-weight: 700;
-    text-transform: uppercase;
+/*    text-transform: uppercase;*/
     line-height: 1.6;
     color: white;
     margin-bottom: 7px;
@@ -173,7 +177,7 @@ body {
 
     line-height: 1.1;
     color: white;
-    text-transform: uppercase;
+/*    text-transform: uppercase;*/
     letter-spacing: 1px;
     margin-bottom: 10px;
 }
@@ -205,10 +209,8 @@ body {
 }
 
 .about-h2 {
-    color: #292929;
+
     font-size: 36px;
-    text-transform: uppercase;
-    font-weight: 700;
 
     margin-bottom: 15px;
 
@@ -234,7 +236,7 @@ body {
     margin: 50px auto 0px;
     color: #6f6f6f;
 
-    /*    text-align: center;*/
+        text-align: center;
 }
 
 .common-cont {
@@ -254,7 +256,7 @@ body {
 .about-deta {
     width: 90%;
     margin: auto;
-    /*    text-align: center;*/
+        text-align: center;
     margin-top: 50px;
     margin-bottom: 100px;
 
@@ -273,11 +275,9 @@ body {
 
 .web-about {
 
-    text-transform: uppercase;
-    /*    text-align: center;*/
-    font-size: 22px;
 
-    font-weight: 700;
+        text-align: center;
+    font-size: 22px;
     margin-top: 35px;
     margin-bottom: 20px;
 
@@ -315,17 +315,16 @@ body {
 
 }
 
-/*
+
 .service
 {
     position: absolute;
 }
-*/
+
 .ser {
     color: white;
     font-size: 36px;
-    text-transform: uppercase;
-    font-weight: 700;
+    
 
     margin-bottom: 15px;
 
@@ -357,12 +356,7 @@ body {
 }
 
 .ser-logo-hide {
-    /*    position: absolute;*/
-    /*
-    left: 0;
-    right: 0;
-*/
-    /*    top: 50%;*/
+    
     width: 100%;
 
 }
@@ -581,8 +575,41 @@ body {
     color: white;
     position: absolute;
     top: -30px;
-    left: 90%;
+    left: 89%;
 }
+.per-txt1 {
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    position: absolute;
+    top: -30px;
+    left: 58%;
+}
+.per-txt2 {
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    position: absolute;
+    top: -30px;
+    left: 49%;
+}
+.per-txt3 {
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    position: absolute;
+    top: -30px;
+    left: 76%;
+}
+.per-txt4 {
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    position: absolute;
+    top: -30px;
+    left: 64%;
+}
+
 
 .picture-client {
     width: 100%;
